<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/title_record_layout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#000000"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/record_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/record"
            android:textColor="#d3d3d3"
            android:textSize="28sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/time_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/title_record_layout"
        android:text="@string/begin_time"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_record_layout"
        android:layout_toLeftOf="@id/time_count"
        android:text="@string/jishi"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/firstlayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/time_count"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/playlast"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/playtest"
            android:visibility="gone" />

        <SeekBar
            android:id="@+id/playseekbar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secordlayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/firstlayout"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete"
            android:visibility="gone" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/save"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/record_start"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:text="@string/click_record"
        android:textSize="40sp" />

</RelativeLayout>