<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical" >

    <include layout="@layout/title" />
    
    
    <EditText
        android:layout_marginTop="65dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:id="@+id/input_name"
        android:layout_height="wrap_content"
        android:hint="@string/input_username" />
    
    <EditText
        android:id="@+id/input_pass"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/input_password" />

    <Button
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="30dp"
        android:textSize="28sp"
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"  
        android:text="@string/login" />
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"  
        >
        <Button
        android:textSize="20sp"
        android:id="@+id/bt_enroll"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"  
        android:text="@string/enroll" />
        
        
    </RelativeLayout>
   

</LinearLayout>
