<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/musiclist_upload"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:gravity="left"
        android:text="@string/upload"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/musiclist_play"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:gravity="left"
        android:text="@string/play"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/musiclist_delete"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:gravity="left"
        android:text="@string/delete"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/musiclist_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="22sp" />

</LinearLayout>