<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/user_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/locate" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/username"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/user_username"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/user_introduce2"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/introduce"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/user_introduce"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textSize="22sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:text="@string/numberofupload"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:text="@string/follower"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:text="@string/attention"
            android:textSize="26sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/user_numberofupload"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|top"
            android:text="@string/zero"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/user_follower"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|top"
            android:text="@string/zero"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/user_attention"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|top"
            android:text="@string/zero"
            android:textSize="26sp" />
    </LinearLayout>

    <include layout="@layout/line" />

</LinearLayout>