<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:background="#000000"
    android:paddingLeft="12dp"
    android:paddingRight="12dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/input_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="2dp"
            android:layout_height="45dp"
            android:background="#0f0f0f" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/input_introduce"
            android:textColor="#d3d3d3"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/input_save"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="#000000"
        android:text="@string/save"
        android:textColor="#ffffff" />

</RelativeLayout>