<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/online_upper"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/upper"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/online_musicname"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/online_play"
            android:layout_width="82dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:descendantFocusability="blocksDescendants"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/play"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/online_uptime"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:text="@string/begin_uploadtime"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/online_isliker_img"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/online_likenum"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>