<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_showtime_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/begin_time"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tv_choseday_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/not_set"
            android:textSize="28sp" />

        <ToggleButton
            android:id="@+id/bt_On_1"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#ffffff"
            android:button="@drawable/checkbox"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_showtime_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/begin_time"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tv_choseday_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/not_set"
            android:textSize="28sp" />

        <ToggleButton
            android:id="@+id/bt_On_2"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#ffffff"
            android:button="@drawable/checkbox"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_showtime_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/begin_time"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tv_choseday_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/not_set"
            android:textSize="28sp" />

        <ToggleButton
            android:id="@+id/bt_On_3"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#ffffff"
            android:button="@drawable/checkbox"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <include layout="@layout/greyline" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal|bottom"
        android:text="@string/now_ring"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/showsong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="28sp" />

</LinearLayout>